components/shared/terminal/tests/snapshots/snapshot_tests__single_stage_task_failed_interactive.snap
---
source: src/terminal/tests/snapshot_tests.rs
expression: sanitized_output(&term)
---
✖  Failed Task (fail) [TIME]
   ✖  Step One (fail) [TIME]
   │
   │ issue:    something went wrong
