components/shared/terminal/tests/snapshots/snapshot_tests__stdout_after_engine_is_dropped_interactive.snap
---
source: src/terminal/tests/snapshot_tests.rs
expression: sanitized_output(&term)
---
✔  Scoped Task (Done) [TIME]
>>> [STDOUT] Plain text after ENGINE DROP
