components/shared/terminal/tests/snapshots/snapshot_tests__stdout_after_grouped_task_ok_plain.snap
---
source: src/terminal/tests/snapshot_tests.rs
expression: sanitized_output(&term)
---
[TASK] Grouped Task
[Grouped Task]    ────────  Initialization  ──────────────────────────────────────────────────────────────────────────
[Grouped Task]    [WAIT] Init DB
[Grouped Task]    ────────  Migrations  ──────────────────────────────────────────────────────────────────────────────
[Grouped Task]    [WAIT] Apply V1
[Grouped Task]    [WAIT] Apply V2
[Grouped Task]    [SUCCESS] Init DB (ok) [TIME]
[Grouped Task]    [SUCCESS] Apply V1 (ok) [TIME]
[Grouped Task]    [SUCCESS] Apply V2 (ok) [TIME]
[SUCCESS] Grouped Task (success) [TIME]
>>> [STDOUT] Plain text after grouped task OK
