components/shared/terminal/tests/snapshots/snapshot_tests__stdout_after_multiple_independent_tasks_interactive.snap
---
source: src/terminal/tests/snapshot_tests.rs
expression: sanitized_output(&term)
---
✔  Task 1 (Done 1) [TIME]
✖  Task 2 (fail) [TIME]
│
│ issue:    Failed 2
>>> [STDOUT] Plain text after multiple tasks
