components/shared/terminal/tests/snapshots/snapshot_tests__stdout_after_simple_task_fail_interactive.snap
---
source: src/terminal/tests/snapshot_tests.rs
expression: sanitized_output(&term)
---
✖  Simple Failing Task (fail) [TIME]
│
│ issue:    Critical error occurred
>>> [STDOUT] Plain text after simple task FAIL
